app/css/widgets/card.scss
.card {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  background: #FFFFFF;
  border-radius: 10px;
  overflow: hidden;

  &__link {
    @include fill;
    z-index: 3;
  }

  &__image {
    position: relative;
    padding-top: 51.45%;
    background: $color-gray;
    border-radius: 10px 10px 0 0;
    overflow: hidden;

    @include mobile {
      padding-top: 42.98%;
    }

    img {
      position: absolute;
      top: 0;
      left: 0;
      min-width: 100%;
      min-height: 100%;
      border-radius: 10px 10px 0 0;
    }
  }

  &__content {
    padding: 17px;
    flex: 1 1 100%;
    max-width: 100%;
  }

  &__top {
    height: 35px;
  }

  &__title {
    margin-top: 21px;
    display: block;
    font-weight: normal;
    font-size: 18px;
    line-height: 25px;
  }

  &__status {
    display: block;
    font-weight: normal;
    font-size: 12px;
    line-height: 16px;

    &--completed {
      color: $color-green;
    }

    &--incompleted {
      color: $color-gray;
    }

    &--inprogress {
      color: $color-yellow-text;
    }
  }

  &__bottom {
    padding: 12px 16px;
    display: flex;
    align-items: center;
    border-top: 1px solid #E7E9ED;

    &-label {
      position: relative;
      padding-left: 22px;
      font-weight: normal;
      font-size: 12px;
      line-height: 100%;
      color: $color-gray;

      &:before {
        content: '';
        @include align(false, true);
        left: 0;
      }

      &--video {
        &:before {
          @include sprite('video');
        }
      }

      &--text {
        &:before {
          @include sprite('text');
        }

      }

      &--presentation {
        &:before {
          @include sprite('presentation');
        }

      }
    }

    &-btn {
      margin-left: auto;
      padding-left: 10px;
    }
  }

  &--large {
    filter: none;
    box-shadow: 0 20px 40px rgba(229, 234, 243, 0.8);
    -webkit-backface-visibility: hidden;
    -moz-backface-visibility: hidden;
    backface-visibility: hidden;
    -webkit-font-smoothing: subpixel-antialiased;
    -moz-osx-font-smoothing: grayscale;
    @include transition;

    &:hover {
      transform: scale(1.05) translateZ(0) translate3d(0, 0, 0);
    }

    @include tablet-and-mobile {
      &:hover {
        transform: none;
      }
    }

    .btn {
      @include mobile {
        width: 100px;
        text-align: center;
      }
    }

    .card__bottom {
      padding: 16px;
    }

    .card__title {
      margin-top: 24px;
      backface-visibility: hidden;
      -webkit-font-smoothing: subpixel-antialiased;

      @include smallTablet {
        font-size: 17px;
      }
    }

    .card__status {
      backface-visibility: hidden;
      -webkit-font-smoothing: subpixel-antialiased;
    }
  }

  &--not-active {
    .card__image {
      &:before {
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        min-width: 100%;
        min-height: 100%;
        background: rgba(30, 68, 113, .4);
        border-radius: 10px 10px 0 0;
        z-index: 2;
      }

      img {
        filter: grayscale(1);
      }
    }

    .card__top .icon {
      position: relative;
      display: inline-flex;

      img {
        filter: grayscale(1);
      }

      &:before {
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        min-width: 100%;
        min-height: 100%;
        background: rgba(30, 68, 113, .4);
        border-radius: 10px 10px 0 0;
        z-index: 2;
      }

    }
  }
}

